Rung 3/115 (robo_code__sittingduck, elo #113) — Round 2 Update